Fixing issue #8; fixing gaps in view rows

--- a/web/themes/custom/m3_fondomaria_theme/sass/global/_pager-styles.scss
+++ b/web/themes/custom/m3_fondomaria_theme/sass/global/_pager-styles.scss
@@ -3,8 +3,8 @@
 ////////////////////////////
 
 .pager {
-  margin-top: 60px;
-  margin-bottom: 60px;
+  margin-top: $spacer-xxl;
+  margin-bottom: $spacer-xxl;
 
   .pager__items {
     @extend .pagination, .justify-content-center;
